config-root/namespaces/jx-production/nodey560/nodey560-nodey560-deploy.yaml
# Source: nodey560/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey560-nodey560
  labels:
    draft: draft-app
    chart: "nodey560-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey560-nodey560
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey560-nodey560
    spec:
      serviceAccountName: nodey560-nodey560
      containers:
        - name: nodey560
          image: "gcr.io/jenkins-x-labs-bdd1/nodey560:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
