config-root/namespaces/jx-production/nodey560/nodey560-ingress.yaml
# Source: nodey560/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    beer: stella
    kubernetes.io/ingress.class: nginx
    wine: shiraz
  name: nodey560
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey560
              servicePort: 80
      host: nodey560-jx-production.35.246.77.80.nip.io
